logic for js app and game compeleted - some style and adding icons started

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissor</title>
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pixelify+Sans&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="gameDiv">
@@ -11,9 +18,15 @@
       <h1 class="gameText" id="computerText">Coputer:</h1>
       <h1 class="gameText" id="resultText">Result:</h1>
 
-      <button class="choiceBtn">Rock</button>
-      <button class="choiceBtn">Paper</button>
-      <button class="choiceBtn">Scissors</button>
+      <button class="choiceBtn">
+        <span style="font-size: 45px">&#9994;</span>
+      </button>
+      <button class="choiceBtn">
+        <span style="font-size: 45px">&#9995;</span>
+      </button>
+      <button class="choiceBtn">
+        <span style="font-size: 45px">&#9996;</span>
+      </button>
     </div>
     <script src="./app.js" defer></script>
   </body>
