emojis for rock-paper-scissors have been added to html and javascript

--- a/index.html
+++ b/index.html
@@ -18,15 +18,9 @@
       <h1 class="gameText" id="computerText">Coputer:</h1>
       <h1 class="gameText" id="resultText">Result:</h1>
 
-      <button class="choiceBtn">
-        <span style="font-size: 45px">&#9994;</span>
-      </button>
-      <button class="choiceBtn">
-        <span style="font-size: 45px">&#9995;</span>
-      </button>
-      <button class="choiceBtn">
-        <span style="font-size: 45px">&#9996;</span>
-      </button>
+      <button class="choiceBtn">✊</button>
+      <button class="choiceBtn">✋</button>
+      <button class="choiceBtn">✌️</button>
     </div>
     <script src="./app.js" defer></script>
   </body>
