--- a/index.html
+++ b/index.html
@@ -13,14 +13,19 @@
     />
   </head>
   <body>
-    <div id="gameDiv">
-      <h1 class="gameText" id="playerText">Player:</h1>
-      <h1 class="gameText" id="computerText">Coputer:</h1>
-      <h1 class="gameText" id="resultText">Result:</h1>
-
-      <button class="choiceBtn">✊</button>
-      <button class="choiceBtn">✋</button>
-      <button class="choiceBtn">✌️</button>
+    <div id="appDiv">
+      <div id="gameDiv">
+        <div class="result">
+          <h1 class="gameText" id="resultText">Result:</h1>
+        </div>
+        <h1 class="gameText" id="playerText">Player:</h1>
+        <h1 class="gameText" id="computerText">Computer:</h1>
+      </div>
+      <div id="controlDiv">
+        <button class="choiceBtn"><span class="iconBtn">✊</span></button>
+        <button class="choiceBtn"><span class="iconBtn">✋</span></button>
+        <button class="choiceBtn"><span class="iconBtn">✌️</span></button>
+      </div>
     </div>
     <script src="./app.js" defer></script>
   </body>
